--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/primary_red</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor">@android:color/white</item>
+        <item name="android:windowLightNavigationBar">true</item>
         <!-- Customize your theme here. -->
 
         <item name="fontFamily">@font/app_typeface</item>
