--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -1,14 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.components.RestaurantFragment">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="8dp"
+    android:background="@drawable/course_card_bg"
+    android:id="@+id/restaurant_card"
+    android:clickable="true"
+    tools:context=".ui.components.CourseCardFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ImageView
+        android:id="@+id/restaurant_icon"
+        android:layout_width="@dimen/course_icon_size"
+        android:layout_height="@dimen/course_icon_size"
+        android:layout_marginStart="@dimen/course_icon_inset"
+        android:layout_marginTop="@dimen/course_icon_inset"
+        android:src="@drawable/a_w"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/restaurant_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="A&amp;W"
+        android:textColor="@color/primary_black"
+        android:textSize="@dimen/cat_info_text_size"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/restaurant_icon"
+        app:layout_constraintTop_toTopOf="@id/restaurant_icon" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/wqb_border"
+        android:backgroundTint="@color/primary_black"
+        android:paddingHorizontal="4dp"
+        android:paddingVertical="2dp"
+        android:text="Fast Food"
+        android:textColor="@color/primary_black"
+        android:textSize="@dimen/cat_wqb_text_size"
+        app:layout_constraintBottom_toBottomOf="@id/restaurant_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/info_section"
+        app:layout_constraintTop_toTopOf="@id/restaurant_name" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        android:id="@+id/info_section"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/restaurant_name"
+        app:layout_constraintTop_toBottomOf="@+id/restaurant_name">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/restaurant_location_icon"
+                android:layout_width="@dimen/cat_info_icon_size"
+                android:layout_height="@dimen/cat_info_icon_size"
+                android:layout_weight="1"
+                android:src="@drawable/location"
+                app:tint="@color/primary_black" />
+
+            <TextView
+                android:id="@+id/restaurant_location_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:text="University High Street"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/cat_info_text_size"
+                app:tint="@color/primary_black"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="4dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/restaurant_time_icon"
+                android:layout_width="@dimen/cat_info_icon_size"
+                android:layout_height="@dimen/cat_info_icon_size"
+                android:layout_weight="1"
+                android:src="@drawable/clock"
+                app:tint="@color/primary_black"/>
+
+            <TextView
+                android:id="@+id/restaurant_time_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:text="9am - 10pm"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/cat_info_text_size" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="4dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="@dimen/cat_info_icon_size"
+                android:layout_height="@dimen/cat_info_icon_size"
+                android:layout_weight="1"
+                android:src="@drawable/clock"
+                android:visibility="invisible"/>
+
+            <TextView
+                android:id="@+id/cost_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:text="$10 - $20"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/cat_info_text_size" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
