--- a/app/src/main/res/layout/fragment_transit.xml
+++ b/app/src/main/res/layout/fragment_transit.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.transit.TransitFragment">
+    tools:context=".ui.fragment.transit.TransitFragment">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map_fragment"
@@ -15,5 +15,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context=".ui.transit.TransitFragment" />
+        tools:context=".ui.fragment.transit.TransitFragment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
