--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,7 +14,15 @@
         <item name="fontFamily">@font/app_typeface</item>
     </style>
 
-    <style name="Theme.MySFU.Splash" parent="Theme.MySFU">
-        <item name="android:windowBackground">@android:color/transparent</item>
+    <style name="Theme.MySFU.PseudoFullScreen" parent="Theme.MySFU">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightNavigationBar">false</item>
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
+
+    <style name="Theme.MySFU.Splash" parent="Theme.MySFU.PseudoFullScreen">
     </style>
 </resources>
